--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "express": "^4.18.1",
     "joi": "^17.6.2",
     "mongoose": "^6.6.2",
-    "mongoose-unique-validator": "^3.1.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "validator": "^13.7.0"
   }
 }
